agregue active a navlink de contacto para estetica de header

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,10 +18,10 @@
               <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./indumentaria.html">Indumentaria</a>
+              <a class="nav-link" href="./indumentaria.html">Indumentaria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./contacto.html">Contacto</a>
+              <a class="nav-link active" href="./contacto.html">Contacto</a>
             </li>
           </ul>
           <!-- Nav fin -->
