--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Inicio</title>
 </head>
@@ -28,9 +29,9 @@
     </header>
 
     <main>
-        <video src="videos/Handmade Resilience.mp4" autoplay muted></video>
+        <video src="videos/Handmade Resilience.mp4" data-aos="zoom-in" data-aos-duration="3000" autoplay muted></video>
         <section class="contenedor-imagenes container-fluid">
-            <div class="row">
+            <div class="row" data-aos="fade-up" data-aos-duration="3000">
               <img class="img-inicio col-sm-6 col-md-3 col-lg-3" src="imagenes/DSC_0302.JPG" alt="">
               <img class="img-inicio col-sm-6 col-md-3 col-lg-3" src="imagenes/DSC_0398.JPG" alt="">
               <img class="img-inicio col-xs-6 col-md-3 col-lg-3" src="imagenes/DSC_0321.JPG" alt="">
@@ -38,7 +39,7 @@
             </div>
         </section>
 
-        <div class="borde-texto container-fluid">
+        <div class="borde-texto container-fluid" data-aos="fade-up" data-aos-duration="3000">
             <div class="texto">
               <h3>Quienes Somos</h3>
               <p class="borde-interno-texto">Handmade es un emprendimiento creado por amigos con el objetivo de...
@@ -75,6 +76,10 @@
 
 
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
