--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles.css">
     <title>Indumentaria</title>
 </head>
@@ -30,7 +31,7 @@
     <main>
         <section class="contenedor-buzos container-fluid">
             <p class="titulos-indumentaria">BUZOS</p>
-            <div class="row">
+            <div class="row" data-aos="fade-up" data-aos-duration="3000">
               <img class="img-buzo col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.37 PM.jpeg" alt="">
               <img class="img-buzo col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.37 PM (1).jpeg" alt="">
               <img class="img-buzo col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.36 PM (2).jpeg" alt="">
@@ -40,7 +41,7 @@
 
         <section class="contenedor-remeras container-fluid">
             <p class="titulos-indumentaria">REMERAS</p>
-            <div class="row">
+            <div class="row" data-aos="fade-up" data-aos-duration="3000">
                 <img class="img-remeras col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.35 PM.jpeg" alt="">
                 <img class="img-remeras col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.43 PM.jpeg" alt="">
                 <img class="img-remeras col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.43 PM.jpeg" alt="">
@@ -50,9 +51,8 @@
 
         <section class="contenedor-camperas container-fluid">
             <p class="titulos-indumentaria">CAMPERAS</p>
-            <div class="row">
+            <div class="row" data-aos="fade-up" data-aos-duration="3000">
                 <img class="img-camperas col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.33 PM.jpeg" alt="">
-                
               </div>
         </section>
     </main>
@@ -84,7 +84,10 @@
     </footer>
 
 
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
