--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -34,7 +34,7 @@
                     <div class="well well-sm">
                         <form class="form-horizontal" method="post">
                             <fieldset>
-                                <legend class="text-center header">Contact us</legend>
+                                <legend class="text-center cabeza">Contact us</legend>
                                 <div class="form-group">
                                     <span class="col-md-1 col-md-offset-2 text-center"></span>
                                     <div class="col-md-12">
