--- a/index.html
+++ b/index.html
@@ -29,9 +29,37 @@
     </header>
 
     <main>
-        <video src="videos/Handmade Resilience.mp4" data-aos="zoom-in" data-aos-duration="3000" autoplay muted></video>
+      <div id="demo" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ul class="carousel-indicators">
+          <li data-target="#demo" data-slide-to="0" class="active"></li>
+          <li data-target="#demo" data-slide-to="1"></li>
+          <li data-target="#demo" data-slide-to="2"></li>
+        </ul>
+        <!-- The slideshow -->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="img-carousel" src="indumentaria/recorte.jpeg" alt="Los Angeles">
+          </div>
+          <div class="carousel-item">
+            <img class="img-carousel" src="indumentaria/recorte1.jpeg" alt="Chicago">
+          </div>
+          <div class="carousel-item">
+            <img class="img-carousel" src="indumentaria/recorte2.jpeg" alt="Buzo">
+          </div>
+        </div>
+        <!-- Left and right controls -->
+        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#demo" data-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </a>
+      
+      </div>
+        <video src="videos/Handmade Resilience.mp4" data-aos="zoom-in" data-aos-duration="1500" autoplay></video>
         <section class="contenedor-imagenes container-fluid">
-            <div class="row" data-aos="fade-up" data-aos-duration="3000">
+            <div class="row" data-aos="fade-up" data-aos-duration="2000">
               <img class="img-inicio col-sm-6 col-md-3 col-lg-3" src="imagenes/DSC_0302.JPG" alt="">
               <img class="img-inicio col-sm-6 col-md-3 col-lg-3" src="imagenes/DSC_0398.JPG" alt="">
               <img class="img-inicio col-xs-6 col-md-3 col-lg-3" src="imagenes/DSC_0321.JPG" alt="">
@@ -39,10 +67,10 @@
             </div>
         </section>
 
-        <div class="borde-texto container-fluid" data-aos="fade-up" data-aos-duration="3000">
+        <div class="borde-texto container-fluid" data-aos="fade-up" data-aos-duration="1000">
             <div class="texto">
               <h3>Quienes Somos</h3>
-              <p class="borde-interno-texto">Handmade es un emprendimiento creado por amigos con el objetivo de...
+              <p class="borde-interno-texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni repellat doloremque, enim reprehenderit velit at maxime. Necessitatibus recusandae deserunt laborum explicabo veniam repudiandae sunt neque facere. Commodi aliquid numquam fugiat.
               </p>
             </div>
         </div>
