--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </a>
       
       </div>
-        <video src="videos/Handmade Resilience.mp4" data-aos="zoom-in" data-aos-duration="1500" autoplay></video>
+        <video src="videos/Handmade Resilience.mp4" data-aos="zoom-in" data-aos-duration="1500" autoplay controls></video>
         <section class="contenedor-imagenes container-fluid">
             <div class="row" data-aos="fade-up" data-aos-duration="2000">
               <img class="img-inicio col-sm-6 col-md-3 col-lg-3" src="imagenes/DSC_0302.JPG" alt="">
