agregue texto provisorio en index, y modifique un media query a 1920px

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="icon" href="imagenes/WhatsApp Image 2022-07-04 at 10.13.53 AM.jpeg">
     <link rel="stylesheet" href="styles/styles.css">
     <title>Handmade</title>
 </head>
@@ -72,7 +73,7 @@
         <div class="borde-texto container-fluid" data-aos="fade-up" data-aos-duration="1000">
             <div class="texto">
               <h3>Quienes Somos</h3>
-              <p class="borde-interno-texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni repellat doloremque, enim reprehenderit velit at maxime. Necessitatibus recusandae deserunt laborum explicabo veniam repudiandae sunt neque facere. Commodi aliquid numquam fugiat.
+              <p class="borde-interno-texto">Handmade es un emprendimiento creado por amigos fanaticos de las indumentaria urbana. En sus comienzos fue dificil, pero dia a dia el emprendimiento crece, y tiene mas llegada a sus clientes!
               </p>
             </div>
         </div>
