agregue precios al main full responsive

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="icon" href="imagenes/WhatsApp Image 2022-07-04 at 10.13.53 AM.jpeg">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Handmade</title>
 </head>
 <body>
@@ -58,16 +58,64 @@
         <a class="carousel-control-next" href="#demo" data-slide="next">
           <span class="carousel-control-next-icon"></span>
         </a>
-      
       </div>
+
         <video src="videos/Handmade Resilience.mp4" data-aos="zoom-in" data-aos-duration="1500" autoplay></video>
         <section class="contenedor-imagenes container-fluid">
-            <div class="row" data-aos="fade-up" data-aos-duration="2000">
-              <img class="img-inicio col-sm-6 col-md-3 col-lg-3" src="imagenes/DSC_0302.JPG" alt="">
-              <img class="img-inicio col-sm-6 col-md-3 col-lg-3" src="imagenes/DSC_0398.JPG" alt="">
-              <img class="img-inicio col-xs-6 col-md-3 col-lg-3" src="imagenes/DSC_0321.JPG" alt="">
-              <img class="img-inicio col-sm-6 col-md-3 col-lg-3" src="indumentaria/DSC_0259.JPG" alt="">
-            </div>
+          <div class="row" data-aos="fade-up" data-aos-duration="2000">
+<!-- IMAGEN 1 -->
+            <div id="demo" class="carousel slide" data-ride="carousel">
+               <!-- The slideshow -->
+                <div class="carousel-inner">
+                  <div class="carousel-item active float-none col-xs-6 col-md-3 col-lg-3">
+                    <img class="img-inicio" src="indumentaria/WhatsApp Image 2022-07-21 at 7.55.36 PM cortada.jpeg" alt="buzo negro hm violeta">
+                  </div>
+                  <div class="subimagen">
+                    <div class="clase text-center font-weight-bold">Buzo Resilience</div>
+                    <p class="precio text-center m-0">$7500</p>
+                  </div>
+                </div>
+              </div>
+<!-- IMAGEN 2 -->
+              <div id="demo" class="carousel slide" data-ride="carousel">
+                <!-- The slideshow -->
+                <div class="carousel-inner">
+                  <div class="carousel-item active float-none col-xs-6 col-md-3 col-lg-3">
+                    <img class="img-inicio" src="indumentaria/DSC_0376.JPG" alt="buzo negro hm violeta">
+                  </div>
+                  <div class="subimagen">
+                    <div class="clase text-center font-weight-bold">Buzo Bordeaux</div>
+                    <p class="precio text-center m-0">$7500</p>
+                  </div>
+                </div>
+              </div>
+<!-- IMAGEN 3 -->
+              <div id="demo" class="carousel slide" data-ride="carousel">
+                <!-- The slideshow -->
+                <div class="carousel-inner">
+                  <div class="carousel-item active float-none col-xs-6 col-md-3 col-lg-3">
+                    <img class="img-inicio" src="indumentaria/DSC_0446.JPG" alt="buzo negro hm violeta">
+                  </div>
+                  <div class="subimagen">
+                    <div class="clase text-center font-weight-bold">Remera Black-P</div>
+                    <p class="precio text-center m-0">$4200</p>
+                  </div>
+                </div>
+              </div>
+<!-- IMAGEN 4 -->
+              <div id="demo" class="carousel slide" data-ride="carousel">
+                <!-- The slideshow -->
+                <div class="carousel-inner">
+                  <div class="carousel-item active float-none col-xs-6 col-md-3 col-lg-3">
+                    <img class="img-inicio" src="indumentaria/WhatsApp Image 2022-07-21 at 7.55.33 PM cortada campera.jpeg" alt="buzo negro hm violeta">
+                  </div>
+                  <div class="subimagen">
+                    <div class="clase text-center font-weight-bold">Rompeviento</div>
+                    <p class="precio text-center m-0">$8000</p>
+                  </div>
+                </div>
+              </div>
+          </div>
         </section>
 
         <div class="borde-texto container-fluid" data-aos="fade-up" data-aos-duration="1000">
