--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="icon" href="../imagenes/WhatsApp Image 2022-07-04 at 10.13.53 AM.jpeg">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Indumentaria</title>
 </head>
 <body>
@@ -35,18 +35,18 @@
         <section class="contenedor-buzos container-fluid">
             <p class="titulos-indumentaria">BUZOS</p>
             <div class="row" data-aos="fade-up" data-aos-duration="3000">
-              <img class="img-buzo col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.37 PM.jpeg" alt="">
-              <img class="img-buzo col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.37 PM (1).jpeg" alt="">
-              <img class="img-buzo col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.36 PM (2).jpeg" alt="">
-              <img class="img-buzo col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.36 PM.jpeg" alt="">
+              <img class="img-buzo col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.37 PM.jpeg" alt="buzo bordeaux hm negro">
+              <img class="img-buzo col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.37 PM (1).jpeg" alt="buzo gris">
+              <img class="img-buzo col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.36 PM (2).jpeg" alt="buzo crema">
+              <img class="img-buzo col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.36 PM.jpeg" alt="buzo negro resilience">
             </div>
         </section>
 
         <section class="contenedor-remeras container-fluid">
             <p class="titulos-indumentaria">REMERAS</p>
             <div class="row" data-aos="fade-up" data-aos-duration="3000">
-                <img class="img-remeras col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.35 PM.jpeg" alt="">
-                <img class="img-remeras col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.43 PM.jpeg" alt="">
+                <img class="img-remeras col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.35 PM.jpeg" alt="remera negra resilience">
+                <img class="img-remeras col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.43 PM.jpeg" alt="remera blanca">
                 <img class="img-remeras col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.43 PM.jpeg" alt="">
                 <img class="img-remeras col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.35 PM.jpeg" alt="">
               </div>
@@ -55,7 +55,7 @@
         <section class="contenedor-camperas container-fluid">
             <p class="titulos-indumentaria">CAMPERAS</p>
             <div class="row" data-aos="fade-up" data-aos-duration="3000">
-                <img class="img-camperas col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.33 PM.jpeg" alt="">
+                <img class="img-camperas col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.33 PM.jpeg" alt="campera negra">
               </div>
         </section>
     </main>
