se agregaron precios en indumentaria

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <video src="videos/Handmade Resilience.mp4" data-aos="zoom-in" data-aos-duration="1500" autoplay></video>
         <section class="contenedor-imagenes container-fluid">
-          <div class="row" data-aos="fade-up" data-aos-duration="2000">
+          <div class="row" data-aos="fade-up" data-aos="zoom-in" data-aos-duration="2000">
 <!-- IMAGEN 1 -->
             <div id="demo" class="carousel slide" data-ride="carousel">
                <!-- The slideshow -->
@@ -118,7 +118,7 @@
           </div>
         </section>
 
-        <div class="borde-texto container-fluid" data-aos="fade-up" data-aos-duration="1000">
+        <div class="borde-texto container-fluid">
             <div class="texto">
               <h3>Quienes Somos</h3>
               <p class="borde-interno-texto">Handmade es un emprendimiento creado por amigos fanaticos de las indumentaria urbana. En sus comienzos fue dificil, pero dia a dia el emprendimiento crece, y tiene mas llegada a sus clientes! 
