--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -34,29 +34,110 @@
     <main>
         <section class="contenedor-buzos container-fluid">
             <p class="titulos-indumentaria">BUZOS</p>
-            <div class="row" data-aos="fade-up" data-aos-duration="3000">
-              <img class="img-buzo col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.37 PM.jpeg" alt="buzo bordeaux hm negro">
-              <img class="img-buzo col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.37 PM (1).jpeg" alt="buzo gris">
-              <img class="img-buzo col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.36 PM (2).jpeg" alt="buzo crema">
-              <img class="img-buzo col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.36 PM.jpeg" alt="buzo negro resilience">
+            <div class="row">
+              <!-- IMAGEN 1 -->
+              <div class="cuadrados">
+                <div class="cont col-xs-6 col-md-3 col-lg-3">
+                  <img class="img-buzo" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.37 PM.jpeg" alt="buzo bordeaux hm negro">
+                </div>
+                <div class="subimagen">
+                  <div class="clase text-center font-weight-bold">HM Bordeaux</div>
+                  <p class="precio text-center m-0">$7500</p>
+                </div>
+              </div>
+              <!-- IMAGEN 2 -->
+              <div class="cuadrados">
+                <div class="cont col-xs-6 col-md-3 col-lg-3">
+                  <img class="img-buzo" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.36 PM.jpeg" alt="buzo negro resilience">
+                </div>
+                <div class="subimagen">
+                  <div class="clase text-center font-weight-bold">Resilience Black</div>
+                  <p class="precio text-center m-0">$7500</p>
+                </div>
+              </div>
+              <!-- IMAGEN 3 -->
+              <div class="cuadrados">
+                <div class="cont col-xs-6 col-md-3 col-lg-3">
+                  <img class="img-buzo" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.37 PM (1).jpeg" alt="buzo handmade gris">
+                </div>
+                <div class="subimagen">
+                  <div class="clase text-center font-weight-bold">HM Brown</div>
+                  <p class="precio text-center m-0">$7500</p>
+                </div>
+              </div>
+              <!-- IMAGEN 4 -->
+              <div class="cuadrados">
+                <div class="cont col-xs-6 col-md-3 col-lg-3">
+                  <img class="img-buzo" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.36 PM (2).jpeg" alt="buzo handmade crema">
+                </div>
+                <div class="subimagen">
+                  <div class="clase text-center font-weight-bold">HM Cream</div>
+                  <p class="precio text-center m-0">$7500</p>
+                </div>
+              </div>
             </div>
         </section>
 
         <section class="contenedor-remeras container-fluid">
             <p class="titulos-indumentaria">REMERAS</p>
-            <div class="row" data-aos="fade-up" data-aos-duration="3000">
-                <img class="img-remeras col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.35 PM.jpeg" alt="remera negra resilience">
-                <img class="img-remeras col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.43 PM.jpeg" alt="remera blanca">
-                <img class="img-remeras col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.43 PM.jpeg" alt="">
-                <img class="img-remeras col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.35 PM.jpeg" alt="">
+            <div class="row">
+              <!-- IMAGEN 1 -->
+              <div class="cuadrados">
+                <div class="cont col-xs-6 col-md-3 col-lg-3">
+                  <img class="img-remeras" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.43 PM.jpeg" alt="remera handmade white">
+                </div>
+                <div class="subimagen">
+                  <div class="clase text-center font-weight-bold">HM White</div>
+                  <p class="precio text-center m-0">$4200</p>
+                </div>
               </div>
+              <!-- IMAGEN 2 -->
+              <div class="cuadrados">
+                <div class="cont col-xs-6 col-md-3 col-lg-3">
+                  <img class="img-remeras" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.35 PM.jpeg" alt="remera resilience">
+                </div>
+                <div class="subimagen">
+                  <div class="clase text-center font-weight-bold">Resilience Black</div>
+                  <p class="precio text-center m-0">$4200</p>
+                </div>
+              </div>
+              <!-- IMAGEN 3 -->
+              <div class="cuadrados">
+                <div class="cont col-xs-6 col-md-3 col-lg-3">
+                  <img class="img-remeras" src="../indumentaria/R3 BACK 2.jpeg" alt="remera resilience 3">
+                </div>
+                <div class="subimagen">
+                  <div class="clase text-center font-weight-bold">Resilience Triple</div>
+                  <p class="precio text-center m-0">$4200</p>
+                </div>
+              </div>
+              <!-- IMAGEN 4 -->
+              <div class="cuadrados">
+                <div class="cont col-xs-6 col-md-3 col-lg-3">
+                  <img class="img-remeras" src="../indumentaria/R3 FRONT.jpeg" alt="remera resilience 3">
+                </div>
+                <div class="subimagen">
+                  <div class="clase text-center font-weight-bold">HM Black</div>
+                  <p class="precio text-center m-0">$4200</p>
+                </div>
+              </div>  
+            </div>
         </section>
 
         <section class="contenedor-camperas container-fluid">
             <p class="titulos-indumentaria">CAMPERAS</p>
-            <div class="row" data-aos="fade-up" data-aos-duration="3000">
-                <img class="img-camperas col-xs-6 col-md-3 col-lg-3" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.33 PM.jpeg" alt="campera negra">
+            <div class="row">
+              <!-- IMAGEN 1 -->
+              <div class="cuadrados">
+                <div class="cont col-xs-6 col-md-3 col-lg-3">
+                  <img class="img-camperas" src="../indumentaria/WhatsApp Image 2022-07-21 at 7.55.33 PM.jpeg" alt="rompeviento handmade">
+                </div>
+                <div class="subimagen">
+                  <div class="clase text-center font-weight-bold">Rompeviento</div>
+                  <p class="precio text-center m-0">$8000</p>
+                </div>
               </div>
+            </div>
         </section>
     </main>
 
